--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: Personal Homepage
 navbar-links:
   Home: "index"
   Projects: "index"
-  Resume: "index"
+  CV: "upload/CV.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
