--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   Home: "index"
   Projects: "index"
   CV: "upload/CV.pdf"
-  Cloud Computing: "_posts/aws_study.html"
+  Cloud Computing: "pages/aws_study.html"
   Photos: "index"
 
 # Image to show in the navigation bar - image must be a square (width = height)
